--- a/catalog/view/theme/d_visualize/template/partial/d_button.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_button.twig
@@ -1,1 +1,2 @@
-{% include component.d_button.template with component.d_button %}
+{#can't use context wia no usesfull and overwriten component #}
+{% include partial.d_button.component.d_button.template %}
