--- a/catalog/view/theme/d_visualize/template/partial/d_button_continue.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_button_continue.twig
@@ -1,1 +1,1 @@
-{% include component.d_button_continue.template with component.d_button_continue %}
+{% include partial.d_button_continue.component.d_button_continue.template %}
