--- a/catalog/view/theme/d_visualize/stylesheet/core/stylesheet.css
+++ b/catalog/view/theme/d_visualize/stylesheet/core/stylesheet.css
@@ -1,3 +1,148 @@
-ul{margin:0;padding:0;list-style:none}ul div{line-height:1}.list{font-size:14px;padding-left:15px;list-style:disc}.list .list{list-style:circle;padding-left:1.25rem}.list-item{line-height:12px}.thumbnail{border:none;padding:0;margin:0;-webkit-border-radius:0;border-radius:0}.btn{-webkit-border-radius:unset;border-radius:unset;border:none}.btn:hover{border-color:rgba(255,255,255,0)}button{outline:none}a:hover{text-decoration:none}label{font-weight:inherit;margin-bottom:0}select{-webkit-appearance:none;-khtml-appearance:none;-moz-appearance:none;-ms-appearance:none;-o-appearance:none;appearance:none}.well{border:none;-webkit-box-shadow:none;-ms-box-shadow:none;-o-box-shadow:none;box-shadow:none;-webkit-border-radius:4px;border-radius:4px}legend{font-size:16px;font-weight:normal;margin-bottom:1.25rem;border-bottom:none}@media only screen and (max-width: 767px){legend{text-align:center}}.group:before,.group:after{content:" ";display:table}.group:after{clear:both}.container{max-width:100%}.table>tbody>tr>td,.table>tbody>tr>th,.table>tfoot>tr>td,.table>tfoot>tr>th,.table>thead>tr>td,.table>thead>tr>th{padding:5px}.table+.row{margin-bottom:20px}.mb-no{margin-bottom:0 !important}@media only screen and (max-width: 399px){.mb-no-xs{margin-bottom:0 !important}}@media only screen and (max-width: 559px){.mb-no-sm{margin-bottom:0 !important}}@media only screen and (max-width: 767px){.mb-no-md{margin-bottom:0 !important}}@media only screen and (max-width: 1247px){.mb-no-lg{margin-bottom:0 !important}}@media only screen and (max-width: 1439px){.mb-no-xl{margin-bottom:0 !important}}.fl-no{float:none !important}@media only screen and (max-width: 399px){.fl-no-xs{float:none !important}}@media only screen and (max-width: 559px){.fl-no-sm{float:none !important}}@media only screen and (max-width: 767px){.fl-no-md{float:none !important}}@media only screen and (max-width: 1247px){.fl-no-lg{float:none !important}}@media only screen and (max-width: 1439px){.fl-no-xl{float:none !important}}.align-middle{display:-webkit-box;display:-ms-flexbox;display:-webkit-flex;display:flex;-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;-webkit-box-flex:1;-webkit-flex-grow:1;-ms-flex-positive:1;flex-grow:1}.text-center{text-align:center !important}@media only screen and (max-width: 399px){.text-center-xs{text-align:center !important}}@media only screen and (max-width: 559px){.text-center-sm{text-align:center !important}}@media only screen and (max-width: 767px){.text-center-md{text-align:center !important}}@media only screen and (max-width: 1247px){.text-center-lg{text-align:center !important}}@media only screen and (max-width: 1439px){.text-center-xl{text-align:center !important}}
+/**
+ * d_visualize_core
+ */
+/**
+ * Global configuration file
+ * of the d_visualize
+ */
+/**
+ * Mixins list:
+ *
+ * @mixin prefixes()
+ * @mixin transition()
+ * @mixin border-radius()
+ * @mixin clearfix()
+ * @mixin arrow()
+ * @mixin push-auto()
+ * @mixin pseudo()
+ * @mixin triangle()
+ * @mixin mq()
+ * @mixin retina()
+ * @mixin font-face()
+ * @mixin absolute-center()
+ *
+ * Function list:
+ *
+ * @function rem()
+ * @function z()
+ */
+.modal-open {
+  overflow: hidden !important; }
 
-/*# sourceMappingURL=stylesheet.css.map */
+/**
+ * Global configuration file
+ * of the d_visualize
+ */
+/**
+ * Mixins list:
+ *
+ * @mixin prefixes()
+ * @mixin transition()
+ * @mixin border-radius()
+ * @mixin clearfix()
+ * @mixin arrow()
+ * @mixin push-auto()
+ * @mixin pseudo()
+ * @mixin triangle()
+ * @mixin mq()
+ * @mixin retina()
+ * @mixin font-face()
+ * @mixin absolute-center()
+ *
+ * Function list:
+ *
+ * @function rem()
+ * @function z()
+ */
+/**
+ * Global configuration file
+ * of the d_visualize
+ */
+/**
+ * Mixins list:
+ *
+ * @mixin prefixes()
+ * @mixin transition()
+ * @mixin border-radius()
+ * @mixin clearfix()
+ * @mixin arrow()
+ * @mixin push-auto()
+ * @mixin pseudo()
+ * @mixin triangle()
+ * @mixin mq()
+ * @mixin retina()
+ * @mixin font-face()
+ * @mixin absolute-center()
+ *
+ * Function list:
+ *
+ * @function rem()
+ * @function z()
+ */
+.mb-no {
+  margin-bottom: 0 !important; }
+  @media only screen and (max-width: 399px) {
+    .mb-no-xs {
+      margin-bottom: 0 !important; } }
+  @media only screen and (max-width: 559px) {
+    .mb-no-sm {
+      margin-bottom: 0 !important; } }
+  @media only screen and (max-width: 767px) {
+    .mb-no-md {
+      margin-bottom: 0 !important; } }
+  @media only screen and (max-width: 1247px) {
+    .mb-no-lg {
+      margin-bottom: 0 !important; } }
+  @media only screen and (max-width: 1439px) {
+    .mb-no-xl {
+      margin-bottom: 0 !important; } }
+
+.fl-no {
+  float: none !important; }
+  @media only screen and (max-width: 399px) {
+    .fl-no-xs {
+      float: none !important; } }
+  @media only screen and (max-width: 559px) {
+    .fl-no-sm {
+      float: none !important; } }
+  @media only screen and (max-width: 767px) {
+    .fl-no-md {
+      float: none !important; } }
+  @media only screen and (max-width: 1247px) {
+    .fl-no-lg {
+      float: none !important; } }
+  @media only screen and (max-width: 1439px) {
+    .fl-no-xl {
+      float: none !important; } }
+
+.align-middle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1; }
+
+.text-center {
+  text-align: center !important; }
+  @media only screen and (max-width: 399px) {
+    .text-center-xs {
+      text-align: center !important; } }
+  @media only screen and (max-width: 559px) {
+    .text-center-sm {
+      text-align: center !important; } }
+  @media only screen and (max-width: 767px) {
+    .text-center-md {
+      text-align: center !important; } }
+  @media only screen and (max-width: 1247px) {
+    .text-center-lg {
+      text-align: center !important; } }
+  @media only screen and (max-width: 1439px) {
+    .text-center-xl {
+      text-align: center !important; } }
