--- a/catalog/view/theme/d_visualize/template/account/newsletter.twig
+++ b/catalog/view/theme/d_visualize/template/account/newsletter.twig
@@ -2,27 +2,22 @@
 {% extends template %}
 {% block content %}
     <h1 class="heading-h1">{{ heading_title }}</h1>
-    <form action="<?php echo $action; ?>" method="post" enctype="multipart/form-data" class="form-horizontal">
+    <form action="{{ action }}" method="post" enctype="multipart/form-data" class="form-horizontal">
         <fieldset>
-            <div class="form-group">
-                <label class="col-sm-2 field-label radio-label label-text-right">{{ entry_newsletter }}</label>
-                <div class="col-sm-10">
-                    <label class="radio-input">
-                        <span class="radio-container">
-                            <input type="radio" name="newsletter" value="1"
-                                   {% if newsletter %}checked="checked"{% endif %} />
-                                <div class="input-circle"></div>
-                            </span>
-                        {{ text_yes }}</label>
-                    <label class="radio-input">
-                    <span class="radio-container">
-                        <input type="radio" name="newsletter" value="0"
-                               {% if not newsletter %}checked="checked"{% endif %} />
-                            <div class="input-circle"></div>
-                        </span>
-                        {{ text_no }}</label>
-                </div>
-            </div>
+            {% include partial.form_group.template with partial.form_group|merge({
+            type:'radio',
+            id:'input-newslatter',
+            name:'newsletter',
+            required: true,
+            radio_values: [{ 'val':1,'name': text_yes},{'val':0,'name':text_no}],
+            radio_values_val:'val',
+            radio_values_check: newslatter,
+            radio_values_name: 'name',
+            placeholder:entry_newslatter,
+            classes:'',
+            text_input:entry_newsletter,
+            error:error_newslatter,
+            }) %}
         </fieldset>
 
         {% include partial.d_button_submit.template with partial.d_button_submit %}
