--- a/catalog/view/theme/d_visualize/template/account/order_list.twig
+++ b/catalog/view/theme/d_visualize/template/account/order_list.twig
@@ -5,7 +5,7 @@
         <h1 class="heading-h1">{{ heading_title }}</h1>
         {% if orders %}
             <div class="table-responsive">
-                <table class="table table-hover">
+                <table class="table vis-table table-hover">
                     <thead>
                     <tr>
                         <td class="text-right">{{ column_order_id }}</td>
@@ -26,9 +26,16 @@
                             <td class="text-right">{{ order.products }}</td>
                             <td class="text-left">{{ order.name }}</td>
                             <td class="text-right">{{ order.total }}</td>
-                            <td class="text-right"><a href="{{ order.href }}" data-toggle="tooltip"
-                                                      title="{{ button_view }}" class="btn btn-like-warning btn-shrink"><i
-                                            class="fa fa-eye"></i></a></td>
+                            <td class="text-right">
+                                {% include partial.button.template with partial.button|merge({
+                                    link: order.view,
+                                    style:'link',
+                                    classes:'like-warning',
+                                    text_button:'<i class="fa fa-eye"></i>',
+                                    title:button_view,
+                                }) %}
+
+                            </td>
                         </tr>
                     {% endfor %}
                     </tbody>
