--- a/catalog/view/theme/d_visualize/template/account/wishlist.twig
+++ b/catalog/view/theme/d_visualize/template/account/wishlist.twig
@@ -3,7 +3,7 @@
 {% block content %}
       <h1 class="heading-h2">{{heading_title}}</h1>
       {% if products %}
-      <table class="table table-bordered table-hover">
+      <table class="table vis-table table-bordered table-hover">
         <thead>
           <tr>
             <td class="text-center">{{column_image}}</td>
@@ -36,8 +36,19 @@
               </div>
               {% endif %}
             </td>
-            <td class="text-right"><button type="button" onclick="cart.add('{{product.product_id}}');" data-toggle="tooltip" title="{{button_cart}}" class="btn btn-primary"><i class="fa fa-shopping-cart"></i></button>
-              <a href="{{product.remove}}" data-toggle="tooltip" title="{{button_remove}}" class="btn btn-danger"><i class="fa fa-times"></i></a></td>
+            <td class="text-right">
+                {% include partial.button.template with partial.button|merge({
+                button: 'cart.add('~product.product_id~')',
+                style:'ghost',
+                text_button:'<i class="fa fa-shopping-cart"></i>',
+                }) %}
+                {#<button type="button" onclick="cart.add('{{product.product_id}}');" data-toggle="tooltip" title="{{button_cart}}" class="btn btn-primary"></button>#}
+
+                {% include component.product_remove.template with({
+                remove_link:product.remove
+                }) %}
+                {#<button type="button" onclick="cart.add('{{product.product_id}}');" data-toggle="tooltip" title="{{button_cart}}" class="btn btn-primary"><i class="fa fa-shopping-cart"></i></button>#}
+              {#<a href="{{product.remove}}" data-toggle="tooltip" title="{{button_remove}}" class="btn btn-danger"><i class="fa fa-times"></i></a></td>#}
           </tr>
           {% endfor %}
         </tbody>
