--- a/catalog/view/theme/d_visualize/template/common/cart.twig
+++ b/catalog/view/theme/d_visualize/template/common/cart.twig
@@ -1,70 +1,8 @@
-<div id="cart" class="cart">
-    <a href="" type="button" data-toggle="dropdown" data-loading-text="{{ text_loading }}"
-            class="cart-icon dropdown-toggle"><span class="cart-total">{{ text_items }}</span></a>
+<div id="cart" class="btn-group btn-block">
+    <button type="button" data-toggle="dropdown" data-loading-text="{{ text_loading }}"
+            class="btn btn-inverse btn-block btn-lg dropdown-toggle"><i class="fa fa-shopping-cart"></i> <span
+                id="cart-total">{{ text_items }}</span></button>
     <ul class="dropdown-menu pull-right">
-        {% if products or vouchers %}
-            <div class="cart-header">
-                {% for product in products %}
-                    <div class="cart_product">
-                        <div class="product-image">
-                            {% if product.thumb %}
-                                <a href="{{ product.href }}" class="product-link">
-                                    <img src="{{ product.thumb }}" alt="{{ product.name }}"
-                                         title="{{ product.name }}" class="img-thumbnail"/>
-                                </a>
-                            {% endif %}
-                        </div>
-                        <div class="product-name"><a href="{{ product.href }}">{{ product.name }}</a>
-                            {% if product.option %}
-                                {% for opt in option %}
-                                    <br/>
-                                    -
-                                    <small>{{ opt.name }} {{ opt.value }}</small>
-                                {% endfor %}
-                            {% endif %}
-                            {% if product.recurring %}
-                                <br/>
-                                -
-                                <small>{{ product.text_recurring }} {{ product.recurring }}</small>
-                            {% endif %}
-                            <br/>
-                            <span>x {{ product.quantity }}</span>
-                        </div>
-                        <div class="product-total">{{ product.total }}</div>
-                        <a href="" type="button" onclick="cart.remove('{{ product.cart_id }}');"
-                           title="{{ product.button_remove }}" class="btn-close">
-                            <img src="catalog/view/theme/d_visualize/image/Icon_delete.svg" class="">
-                        </a>
-                    </div>
-            {% endfor %}
-            {% for vouch in vouchers %}
-                    <td class="text-center"></td>
-                    <td class="text-left">{{ vouch.description }}</td>
-                    <td class="text-right">x&nbsp;1</td>
-                    <td class="text-right">{{ vouch.amount }}</td>
-                    <td class="text-center text-danger">
-                        <button type="button" onclick="voucher.remove('{{ vouch.key }}');"
-                                title="{{ vouch.button_remove }}" class="btn btn-danger btn-xs"><i
-                                    class="fa fa-times"></i></button>
-                    </td>
-                {% endfor %}
-            </div>
-            <div class="cart-body">
-                <div class="table-total">
-                    {% for total in totals %}
-                        <div class="row">
-                            <span class="table-total_info">{{ total.title }}</span>
-                            <span class="table-total_value">{{ total.text }}</span>
-                        </div>
-                    {% endfor %}
-                </div>
-                <div class="buttons-group">
-                    <a href="{{ cart }}" class="btn btn-secondary">{{ text_cart }}</a>
-                    <a href="{{ checkout }}" class="btn btn-primary">{{ text_checkout }}</a>
-                </div>
-            </div>
-        {% else %}
-            <p class="text-empty">{{ text_empty }}</p>
-        {% endif %}
+        {% include component.d_mini_cart.template with component.d_mini_cart|merge({products:products,vouchers:vouchers}) %}
     </ul>
 </div>
