--- a/catalog/view/theme/d_visualize/template/common/header.twig
+++ b/catalog/view/theme/d_visualize/template/common/header.twig
@@ -73,11 +73,4 @@
 
 
 </head>
-<body>
-<div class="container">
-    <div class="row">
-        <div class="col">
-        </div>
-    </div>
-</div>
-
+<body class="{{ class }}">
