--- a/catalog/view/theme/d_visualize/template/common/success.twig
+++ b/catalog/view/theme/d_visualize/template/common/success.twig
@@ -4,5 +4,5 @@
 {% block content %}
       <div class="h1">{{heading_title}}</div>
       {{text_message}}
-      {% include partial.d_button_continue.template with partial.d_button_continue %}
+      {% include partial.d_button_continue.template  %}
 {% endblock %}
