--- a/catalog/view/theme/d_visualize/template/component/d_account_field/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_account_field/default.twig
@@ -14,30 +14,38 @@
 </div>
 {% endif %}
 {% include partial.d_name_field.template with  partial.d_name_field %}
-<div class="form-group required">
-  <label class="{% if form %}col-sm-2{% endif %} field-label label-right-md" for="input-email"><span>{{entry_email}}</span></label>
-  <div class="{% if form %}col-sm-10{% endif %}">
-    <input type="text" name="email" value="{{email}}" id="input-email" class="field form-control" />
-    {% if error_email %}
-    <div class="text-danger">{{error_email}}</div>
-    {% endif %}
-  </div>
-</div>
-<div class="form-group required">
-  <label class="{% if form %}col-sm-2{% endif %} field-label label-right-md" for="input-telephone"><span>{{entry_telephone}}</span></label>
-  <div class="{% if form %}col-sm-10{% endif %}">
-    <input type="text" name="telephone" value="{{telephone}}" id="input-telephone" class="field form-control" />
-    {% if error_telephone %}
-    <div class="text-danger">{{error_telephone}}</div>
-    {% endif %}
-  </div>
-</div>
+ {% include partial.form_group.template with partial.form_group|merge({
+ type:'email',
+ id:'input-email',
+ name:'email',
+ requier:true,
+ value:email,
+ classes:'',
+ placeholder:entry_email,
+ text_input:entry_email,
+ }) %}
+ {% include partial.form_group.template with partial.form_group|merge({
+ type:'text',
+ id:'input-telephone',
+ name:'telephone',
+ required: true,
+ value:telephone,
+ placeholder:entry_telephone,
+ classes:'',
+ text_input:entry_telephone,
+ error:error_telephone,
+ }) %}
 {% if constant('VERSION') < '3.0.0.0' %}
-<div class="form-group">
-  <label class="{% if form %}col-sm-2{% endif %} field-label label-right-md" for="input-fax"><span>{{entry_fax}}</span></label>
-  <div class="{% if form %}col-sm-10{% endif %}">
-    <input type="text" name="fax" value="{{fax}}" id="input-fax" class="field form-control" />
-  </div>
-</div>
+    {% include partial.form_group.template with partial.form_group|merge({
+    type:'text',
+    id:'input-fax',
+    name:'fax',
+    required: true,
+    value:fax,
+    placeholder:entry_fax,
+    classes:'',
+    text_input:entry_fax,
+    error:error_fax,
+    }) %}
 {% endif %}
 <!-- /> d_account_field_default -->
