--- a/catalog/view/theme/d_visualize/template/component/d_button/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_button/default.twig
@@ -1,24 +1,51 @@
 <!-- > d_button -->
-<div class="buttons clearfix">
-  <div class="pull-left">
-    {% if button_back %}
-    <a href="{{back}}" class="btn btn-default">{{button_back}}</a>
-    {% endif %}
-  </div>
-  <div class="pull-right">
-    {% if text_agree %}
-      {{text_agree}}
-      <input type="checkbox" name="agree" value="1" {% if agree %}checked="checked"{% endif %} />
-      &nbsp;
-    {% endif %}
-    {% if continue %}
-      <a href="{{continue}}" class="btn btn-primary">{{button_continue}}</a>
-    {% elseif button_continue %}
-      <input type="submit" value="{{button_continue}}" class="btn btn-primary" />
-    {% endif %}
-    {% if button_submit %}
-      <input type="submit" value="{{button_submit}}" class="btn btn-primary" />
-    {% endif %}
-  </div>
+<div class="buttons">
+    <div class="vis-back">
+        {% if button_back %}
+            {% include partial.button.template with partial.button|merge({
+            link:back ,
+            style:'default',
+            classes:'btn-lg',
+            text_button:button_back,
+            }) %}
+        {% endif %}
+    </div>
+    <div class="vis-forward">
+        {% if text_agree %}
+            <div class="agree">
+            <span>
+              {{ text_agree }}
+            </span>
+                {% include partial.input.template with partial.input|merge({
+                type:'checkbox',
+                name:'agree',
+                value:'1',
+                checked:agree,
+                }) %}
+            </div>
+        {% endif %}
+        {% if continue %}
+            {% include partial.button.template with partial.button|merge({
+            link:continue ,
+            style:'primary',
+            classes:'btn-lg',
+            text_button:button_continue,
+            }) %}
+        {% elseif button_continue %}
+            {% include partial.input.template with partial.input|merge({
+            type:'submit',
+            value:button_continue,
+            button:'primary',
+            classes:'btn-shrink btn-block-sm btn-inline'
+            }) %}
+        {% endif %}
+        {% if button_submit %}
+            {% include partial.input.template with partial.input|merge({
+            type:'submit',
+            value:button_submit,
+            button:'primary',
+            }) %}
+        {% endif %}
+    </div>
 </div>
 <!-- /> d_button -->
