--- a/catalog/view/theme/d_visualize/template/component/d_button_submit/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_button_submit/default.twig
@@ -1,21 +1,45 @@
 <!-- > d_button_submit_default -->
-<div class="buttons clearfix">
-  <div class="pull-left fl-no-sm">
-    {% if button_back %}
-    <a href="{{back}}" class="btn btn-default btn-shrink btn-block-sm">{{button_back}}</a>
-    {% endif %}
-  </div>
-  <div class="pull-right fl-no-sm">
-    {% if text_agree %}
-      {{text_agree}}
-      <input type="checkbox" name="agree" value="1" {% if agree %}checked="checked"{% endif %} />
-      &nbsp;
-    {% endif %}
-    {% if continue %}
-      <a href="{{continue}}" class="btn btn-default btn-block-sm">{{button_continue}}</a>
-    {% elseif button_continue %}
-      <input type="submit" value="{{button_continue}}" class="btn btn-primary btn-shrink btn-block-sm" />
-    {% endif %}
-  </div>
+<div class="buttons">
+    <div class="vis-back">
+        {% if button_back %}
+            {% include partial.button.template with partial.button|merge({
+            link: back,
+            style:'default',
+            classes:'btn-shrink btn-block-sm',
+            text_button:button_back,
+            }) %}
+        {% endif %}
+    </div>
+    <div class="vis-forward">
+        {% if text_agree %}
+        <div class="agree">
+            <span>
+              {{ text_agree }}
+            </span>
+                {% include partial.input.template with partial.input|merge({
+                    type:'checkbox',
+                    name:'agree',
+                    value:'1',
+                    checked:agree,
+                }) %}
+            </div>
+        {% endif %}
+        {% if continue %}
+            {% include partial.button.template with partial.button|merge({
+            link: continue,
+            style:'default',
+            classes:'btn-block-sm',
+            text_button:button_continue,
+            }) %}
+        {% elseif button_continue %}
+            {% include partial.input.template with partial.input|merge({
+            type:'submit',
+            value:button_continue,
+            button:true,
+            style:'primary',
+            classes:'btn-shrink btn-block-sm btn-inline'
+            }) %}
+        {% endif %}
+    </div>
 </div>
 <!-- /> d_button_submit_default -->
