--- a/catalog/view/theme/d_visualize/template/error/not_found.twig
+++ b/catalog/view/theme/d_visualize/template/error/not_found.twig
@@ -1,8 +1,7 @@
 {#it's mean in layout template#}
 {% extends template %}
-
 {% block content %}
     <h1 class="heading-h1">{{ heading_title }}</h1>
     <p>{{ text_error }}</p>
-    {% include partial.d_button_continue.template with  partial.d_button_continue %}
+    {% include partial.d_button_continue.template  %}
 {% endblock %}
