--- a/catalog/view/theme/d_visualize/template/partial/d_layout_open.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_layout_open.twig
@@ -1,1 +1,5 @@
-{#old#}
+{% if not component.d_layout_open.template  %}
+    {% include partial.d_layout_open.component.d_layout_open.template  %}
+{% else %}
+    {% include component.d_layout_open.template with component.d_layout_open %}
+{% endif %}
