--- a/catalog/view/theme/d_visualize/template/product/manufacturer_info.twig
+++ b/catalog/view/theme/d_visualize/template/product/manufacturer_info.twig
@@ -1,25 +1,6 @@
 {#it's mean in layout template#}
 {% extends template %}
 {% block content %}
-        <div class="h2">{{heading_title}}</div>
-        {% if products %}
-          {% include 'd_visualize/template/partial/default.twig' %}
-          <div class="row">
-            {% for product in products %}
-              <div class="product-layout product-list col-xs-12">
-                {% include 'd_visualize/template/partial/d_product_thumb.twig' with product %}
-              </div>
-            {% endfor %}
-          </div>
-          <div class="row">
-            <div class="col-sm-6 text-left">{{pagination}}</div>
-            <div class="col-sm-6 text-right">{{results}}</div>
-          </div>
-        {% else %}
-            <p>{{text_empty}}</p>
-            <div class="buttons">
-              <div class="pull-right"><a href="{{continue}}" class="btn btn-default">{{button_continue}}</a></div>
-            </div>
-        {% endif %}
-
+    <div class="h2">{{heading_title}}</div>
+    {% include partial.d_product_list.template with  partial.d_product_list %}
 {% endblock %}
