--- a/catalog/view/theme/d_visualize/template/product/manufacturer_list.twig
+++ b/catalog/view/theme/d_visualize/template/product/manufacturer_list.twig
@@ -21,8 +21,6 @@
           {% endfor %}
         {% else %}
           <p>{{text_empty}}</p>
-          <div class="buttons">
-            <div class="pull-right"><a href="{{continue}}" class="btn btn-default">{{button_continue}}</a></div>
-          </div>
+            {% include partial.d_button_continue.template with  partial.d_button_continue %}
         {% endif %}
 {% endblock %}
