--- a/catalog/view/theme/d_visualize/template/product/product.twig
+++ b/catalog/view/theme/d_visualize/template/product/product.twig
@@ -1,5 +1,7 @@
 {% extends template %}
 {% block content %}
-    {% include component.product_product.template %}
+<div id="product-product" class="product-product">
+{% include component.product_product.template %}
+</div>
 {% endblock %}
 
